(lang dune 3.12)

(name aoc2023)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Nathan Miller")

(maintainers "Nathan Miller")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2023)
 (synopsis "Advent of Code")
 (description "Implementation of the solutions to Advent of Code 2023 in Ocaml.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
