(library
 (name aoc2023)
 (modules
  util
  problem1
  problem2
  problem3
  problem4
  problem5
  problem6
  problem7
  problem8
  problem9
  problem10
  problem11
  problem12
  problem13
  problem14
  problem15
  problem16
  problem17
  problem18
  problem19
  problem20
  problem21
  problem22
  problem23
  problem24
  problem25)
 (libraries core core_kernel.pairing_heap))
